--- a/index.html
+++ b/index.html
@@ -10,24 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-     <script type="text/javascript">
-    function toggleVisibility(divid) {
-    if (divid="develop"){
-        document.getElementById("about").style.visibility = "visible";
-        document.getElementById("products").style.visibility = "hidden";
-    }
-    else if (divid="products")
-    {
-        document.getElementById("products").style.visibility = "visible";
-        document.getElementById("about").style.visibility = "hidden";
-    }
-    }
-    </script>
-
-
-< href="#" onclick="toggleVisibility('about');">About
-
-< href="##" onclick="toggleVisibility1('products');"> Products
 
 </head>
 
@@ -39,7 +21,7 @@
         <div class="topleft">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <a class="p" href="develop.html">DEVELOP</a>
+                    <a class="p" href="#develop">DEVELOP</a>
                 </div>
             </div>
             <!-- <div class="row">
@@ -51,14 +33,14 @@
         <div class="topright">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <a class="p" href="acro.html">FLIP</a>
+                <a class="p" href="#flip">FLIP</a>
                 </div>
             </div>
         </div>
 
 
     </section>
-    <section class="develop">
+    <section id="develop">
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -92,23 +74,13 @@
 
     <!-- Lading -->
     <section id="landing" class="container-fluid text-center">
-        <div class="topleft">
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                    <a href="https://www.facebook.com/megantking">
-                        <img src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11230599_10205975254932960_2843176119736684768_n.jpg?oh=f73cc46209729c5da33fec5f8053ae81&oe=55F5DC13" /> </a>
-                </div>
-            </div>
+       
             <!-- <div class="row">
                 <div class="col-xs-11" id="phone"><i class="fa fa-phone"></i> <a href="tel:281-844-4058">281-844-4058</a>
                 </div>
             </div>-->
         </div>
 
-        <div class="topright hidden-sm hidden-xs visible-md visible-lg">
-            <div class="row">
-            </div>
-        </div>
 
 
         <!-- Who We Are -->
@@ -209,7 +181,7 @@
         </footer>
     </section>
 </section>
- <section class="flip">
+ <section id="flip">
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -243,24 +215,7 @@
 
     <!-- Lading -->
     <section id="landing" class="container-fluid text-center">
-        <div class="topleft">
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                    <a href="https://www.facebook.com/megantking">
-                        <img src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11230599_10205975254932960_2843176119736684768_n.jpg?oh=f73cc46209729c5da33fec5f8053ae81&oe=55F5DC13" /> </a>
-                </div>
-            </div>
-            <!-- <div class="row">
-                <div class="col-xs-11" id="phone"><i class="fa fa-phone"></i> <a href="tel:281-844-4058">281-844-4058</a>
-                </div>
-            </div>-->
-        </div>
-
-        <div class="topright hidden-sm hidden-xs visible-md visible-lg">
-            <div class="row">
-            </div>
-        </div>
-
+       
 
         <!-- Who We Are -->
         <section id="who-we-are" class="container-fluid">
