--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/index-style.css" />
     <link rel="stylesheet" href="css/my-style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+  
+    
 
 
 </head>
@@ -19,26 +19,23 @@
 
     <!-- Lading -->
     <section id="landing" class="container-fluid text-center">
-        <div class="topleft">
+          <a href="#develop"> <div class="topleft">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <a class="p" href="#develop">DEVELOP</a>
+                    <p class="p">DEVELOP</p>
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="col-xs-11" id="phone"><i class="fa fa-phone"></i> <a href="tel:281-844-4058">281-844-4058</a>
-                </div>
-            </div>-->
-        </div>
+            
+        </div></a>
 
-        <div class="topright">
+       <a href="#flip"> <div class="topright">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <a class="p" href="#flip">FLIP</a>
+                    <p class="p">FLIP</p>
                 </div>
             </div>
         </div>
-
+</a>
 
     </section>
     <section id="develop">
@@ -231,10 +228,10 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <img class="img-responsive" src="https://placeholdit.imgix.net/~text?txtsize=47&txt=500%C3%97350&w=500&h=350" alt="logo" />
+                            <img class="img-responsive" src="img/Acro5:3:2015.JPG" alt="logo" />
                         </div>
                         <div class="col-sm-8">
-                            <p id="first-par">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                            <br><p id="first-par">Are you a musician? Do you want your show to be badass? Let my partner and I grace your stage with an acro proformance while you play. Oh's and ah's guarenteed. </p>
                         </div>
                     </div>
                 </div>
